feat(login): 重构discuz登录模块并更新依赖
- 移除旧的discuz-login.py文件，采用新的登录实现方式
- 更新requirements.txt添加DrissionPage、Pillow、opencv-python和numpy依赖
- 调整github工作流定时任务从每天2点改为1点执行
- 更新.gitignore文件添加python编译文件和IDE配置文件过滤规则

--- a/.github/workflows/laowang.yml
+++ b/.github/workflows/laowang.yml
@@ -1,4 +1,4 @@
-name: Run soushuba qiandao
+name: Run laowang qiandao
 on:
   push:
   # Allows you to run this workflow manually from the Actions tab
@@ -10,9 +10,9 @@ jobs:
   run:
     runs-on: ubuntu-latest
     env:
-      SOUSHUBA_HOSTNAME: ${{ secrets.SOUSHUBA_HOSTNAME }}
-      SOUSHUBA_USERNAME: ${{ secrets.SOUSHUBA_USERNAME }}
-      SOUSHUBA_PASSWORD: ${{ secrets.SOUSHUBA_PASSWORD }}
+      LAOWANG_HOSTNAME: ${{ secrets.LAOWANG_HOSTNAME }}
+      LAOWANG_USERNAME: ${{ secrets.LAOWANG_USERNAME }}
+      LAOWANG_PASSWORD: ${{ secrets.LAOWANG_PASSWORD }}
 
     steps:
       - name: Check out repository code
@@ -23,4 +23,8 @@ jobs:
           python-version: '3.13'
           cache: 'pip'
       - run: pip install -r requirements.txt
-      - run: python soushuba.py
+      - name: Check Chrome version
+        run: |
+          google-chrome --version
+          which google-chrome
+      - run: python laowang.py
