--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 requests==2.32.5
 beautifulsoup4==4.13.5
 lxml==6.0.1
+DrissionPage==4.1.1.2
+Pillow==12.1.0
+opencv-python==4.12.0.88
+numpy==2.2.6
