--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -1,15 +1,18 @@
-name: Run laowang qiandao
+name: Run sign
 on:
   push:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
   schedule:
-    - cron: '0 1 * * *'
+    - cron: '42 23 * * *'
 
 jobs:
   run:
     runs-on: ubuntu-latest
     env:
+      SOUSHUBA_HOSTNAME: ${{ secrets.SOUSHUBA_HOSTNAME }}
+      SOUSHUBA_USERNAME: ${{ secrets.SOUSHUBA_USERNAME }}
+      SOUSHUBA_PASSWORD: ${{ secrets.SOUSHUBA_PASSWORD }}
       LAOWANG_HOSTNAME: ${{ secrets.LAOWANG_HOSTNAME }}
       LAOWANG_USERNAME: ${{ secrets.LAOWANG_USERNAME }}
       LAOWANG_PASSWORD: ${{ secrets.LAOWANG_PASSWORD }}
@@ -28,4 +31,5 @@ jobs:
         run: |
           google-chrome --version
           which google-chrome
+      - run: python soushuba.py
       - run: python laowang.py
