fix(workflow): 注释掉soushuba.py执行步骤以解决连接错误
- 在GitHub工作流中注释掉soushuba.py的执行步骤
- 保留continue-on-error配置以防止工作流中断

fix(send): 添加channel参数调试信息

- 在Send类中添加打印语句显示channel参数来源
- 区分显式传递参数和环境变量获取的情况

fix(soushuba): 添加服务器连接错误通知

- 在异常处理中添加Send.send调用发送连接错误消息
- 提供更清晰的错误提示帮助用户检查网络或服务器状态

--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -31,5 +31,7 @@ jobs:
         run: |
           google-chrome --version
           which google-chrome
-      - run: python soushuba.py
+      # - name: Run soushuba.py
+      #   continue-on-error: true
+      #   run: python soushuba.py
       - run: python laowang.py
