feat(.github/workflows): 添加Bark通知配置
添加BARKURL和BARKKEY环境变量配置，
用于支持Bark推送通知功能

--- a/.github/workflows/sign.yml
+++ b/.github/workflows/sign.yml
@@ -17,6 +17,8 @@ jobs:
       LAOWANG_USERNAME: ${{ secrets.LAOWANG_USERNAME }}
       LAOWANG_PASSWORD: ${{ secrets.LAOWANG_PASSWORD }}
       LAOWANG_COOKIE: ${{ secrets.LAOWANG_COOKIE }}
+      BARKURL: ${{ secrets.BARKURL }}
+      BARKKEY: ${{ secrets.BARKKEY }}
       SENDCHANNEL: ${{ secrets.SENDCHANNEL }}
 
     steps:
